--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-diesel = {version = "2", features = ["postgres"]}
+diesel = {version = "2", features = ["postgres", "chrono"]}
 diesel-async = { version = "0.4", features = ["postgres"] }
 chrono = { version = "0.4" }
