--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     build: .
     environment:
       - DATABASE_URL=postgres://postgres:postgres@postgres:5432/app_db
+      - ROCKET_DATABASES={postgres={url="postgres://postgres:postgres@postgres:5432/app_db"}}
     ports:
       - 8000:8000
     volumes:
