--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[dev-dependencies]
+reqwest = { version = "0.11", features = ["json", "blocking"] }
+
 
 [dependencies]
 rocket ={ version = "0.5", features = ["json"] }
