--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ reqwest = { version = "0.11", features = ["json", "blocking"] }
 
 
 [dependencies]
-rocket ={ version = "0.5", features = ["json"] }
+rocket = { version = "0.5", features = ["json"] }
 rocket_db_pools = { version = "0.1", features = ["diesel_postgres"] }
 diesel = {version = "2", features = ["chrono"]}
 diesel-async = { version = "0.4", features = ["postgres"] }
 chrono = { version = "0.4", features = ["serde"] }
 serde = "1.0"
+serde_json = "1.0"
